--- a/index.html
+++ b/index.html
@@ -21,27 +21,24 @@
     <p id="modulus1"></p>
     <p id="divisional"></p>
     <p id="divide"></p>
+    <h2 id="title4th" style="text-align: center;text-decoration: underline;"></h2>
+    <p id="fourthday" style="text-align: center;text-decoration:underline"></p>
+    <p id="experience4"></p>
+    <p id="ternary1" style="text-decoration: underline;"></p>
+    <p id="subtopic1"></p>
+    <p id="link1"></p>
+    <p id="firstlink"></p>
+    <p id="link2"></p>
+    <p id="secondlink"></p>
+    <p id="link3"></p>
+    <p id="Thirdlink"></p>
+    <p id="log" style="text-decoration: underline;"></p>
+    <p id="scorei"></p>
+    <p id="scoreii"></p>
+    <p id="scoreiii"></p>
+    <p id="scoreiv"></p>
 
-    
 
-<script>
-window.alert("Welcome To My Third-Day Javascript Experience");
-document.getElementById('title').innerHTML="Assignment";
-document.getElementById('title 1').innerHTML="My Third-Day Javascript Experience";
-document.getElementById('experience').innerHTML="My Third Day experience in Javascript Was Awesome though I guess Its Becoming more deeper and more Different.Third day lesson was on Javascript Operators..Javascript is fun to learn according to my research and I believe as times goes on and with a lot of practices i would Understand More better...";
-document.getElementById('topic').innerHTML="<h2><u>Javascript Operators </u></h2>";
-document.getElementById('subtopic').innerHTML="<h3> Assignment Operators </h3>";
-document.getElementById('multiple').innerHTML="<h4>Multiplication Assignment Operators:</h4>";
-document.getElementById('exponent').innerHTML="<h4>Exponential Assignment Operators:</h4>";
-document.getElementById('modulus').innerHTML="<h4>Modulus assignment Operators:<h4>";
-document.getElementById('divisional').innerHTML="<h4>division assignment Operators:<h4>";
-
-
-</script>
-
-   
-
-  
 <script src="script.js"></script>
 </body>
 </html>
