pushing my updated codes

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
     <p id="experience5"></p>
     <p id="con" style="text-decoration: underline;"></p>
     <p id="subtopic5"></p>
+    <p id="scores1"></p>
+    <p id="scores2"></p>
+    <p id="scores3"></p>
+    <p id="scores4"></p>
+    <p id="scores5"></p>
+    <p id="scores6"></p>
+   <p id="finalscore"></p>
     <p id="scores"></p>
 
 <script src="script.js"></script>
